# ray_tracer_challenge

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: camera.h  canvas.h  common.h  float.h  intersection.h  light.h  light_list.h  material.h  matrix.h  object_list.h  ray.h  sphere.h  transformation_chain.h  tuple.h  world.h
src/: camera.c  canvas.c  float.c  intersection.c  light_list.c  main.c  material.c  matrix.c  object_list.c  ray.c  sphere.c  transformation_chain.c  tuple.c  world.c
test/: test_camera.c  test_canvas.c  test_intersection.c  test_light.c  test_macros.h  test_material.c  test_matrix.c  test_ray.c  test_sphere.c  test_transformations.c  test_tuple.c  test_tuple.cpp  test_vector.c  test_world.c
test/common/: utils.c  utils.h
